--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   "description": "Game idler plugin for Stem",
   "main": "index.js",
   "author": "Alvin Lazaro <me@alvinl.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Alvinlz/stem-idler.git"
+  }
 }
