--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "stem-idler",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "description": "Game idler plugin for Stem",
   "main": "index.js",
   "author": "Alvin Lazaro <me@alvinl.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Alvinlz/stem-idler.git"
+    "url": "https://github.com/alvinl/stem-idler.git"
   }
 }
